--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
     "name": "swift-shop-server",
     "version": "1.0.0",
+    "license": "MIT",
     "type": "module",
     "scripts": {
         "start": "node server.js",
