--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,15 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "@reduxjs/toolkit": "^2.1.0",
+        "@reduxjs/toolkit": "^2.11.2",
         "axios": "^1.6.0",
+        "concurrently": "^9.2.1",
         "lucide-react": "^0.563.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
-        "react-redux": "^9.1.0",
-        "react-router-dom": "^6.22.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^6.30.3",
         "react-scripts": "^5.0.1",
         "react-toastify": "^11.0.5",
         "tailwindcss": "^3.4.1"
